Bug 4875 - sha1.h:25:20: error: stdint.h: No such file or directory
Summary: sha1.h:25:20: error: stdint.h: No such file or directory
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.19
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-01 18:38 UTC by John David Anglin
Modified: 2007-08-10 12:37 UTC (History)
1 user (show)

See Also:
Host: hppa*-*-hpux*
Target: hppa*-*-hpux*
Build: hppa*-*-hpux*
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2007-08-01 18:38:37 UTC
gcc -DHAVE_CONFIG_H -I. -I../../src/ld -I. -D_GNU_SOURCE -I. -I../../src/ld -I..
/bfd -I../../src/ld/../bfd -I../../src/ld/../include  -g -O2 -DLOCALEDIR="\"/opt
/gnu64/share/locale\""   -W -Wall -Wstrict-prototypes -Wmissing-prototypes -Werr
or -g -O2 -c ../../src/ld/sha1.c
In file included from ../../src/ld/sha1.c:27:
../../src/ld/sha1.h:25:20: error: stdint.h: No such file or directory
Comment 1 dave@hiauly1.hia.nrc.ca 2007-08-01 19:11:26 UTC
Subject: Re:  New: sha1.h:25:20: error: stdint.h: No such file or directory

Looks like this could be fixed by including "bfd_stdint.h" and
adding an appropriate dependency to Makefile.am.

Dave
Comment 2 H.J. Lu 2007-08-09 18:31:58 UTC
A patch is posted at

http://sourceware.org/ml/binutils/2007-08/msg00133.html
Comment 3 dave@hiauly1.hia.nrc.ca 2007-08-09 20:07:15 UTC
Subject: Re:  sha1.h:25:20: error: stdint.h: No such file or directory

> A patch is posted at
> 
> http://sourceware.org/ml/binutils/2007-08/msg00133.html

I have tried the second hunk and didn't encounter any problems.

Should there be Makefile dependencies added for ld/elf-hints-local.h
and ld/sha1.h?

Dave
Comment 4 H.J. Lu 2007-08-10 12:37:38 UTC
Fixed by

http://sourceware.org/ml/binutils/2007-08/msg00156.html