2007-08-10  H.J. Lu  <hongjiu.lu@intel.com>

PR ld/4875
	* elf-hints-local.h: Include bfd_stdint.h.  Use uint32_t
	instead of u_int32_t.

	* sha1.h: Include bfd_stdint.h instead of <stdint.h>.